docker/k8s/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: selenium-grid
  labels:
    app: selenium-hub
spec:
  selector:
    app: selenium-hub
  type: NodePort
  ports:
  - name: event-publish
    port: 4442
    targetPort: 4442
    nodePort: 30442
    protocol: TCP
  - name: event-subscribe
    port: 4443
    targetPort: 4443
    nodePort: 30443
    protocol: TCP
  - name: web
    port: 4444
    targetPort: 4444
    nodePort: 30444
    protocol: TCP
  - name: metrics
    port: 5557
    targetPort: 5557
    protocol: TCP
